fix background color bug where it was going out of the container

--- a/client/src/Components/Password/Password.css
+++ b/client/src/Components/Password/Password.css
@@ -7,10 +7,12 @@
 }
 .password{
   text-align: center;
-  background-color: #f3ecec;
   font-size: 18px;
   color: black;
   width: 100%;
+}
+.password-content{
+  background-color: #f3ecec;
 }
 .pass-field{
   display: flex;
