--- a/client/src/Components/Vault/Vault.css
+++ b/client/src/Components/Vault/Vault.css
@@ -139,7 +139,7 @@
   gap: 10px;
   margin: 10px;
 }
-@media screen and (width<800px){
+@media screen and (width<850px){
   .vault-container{
     flex-direction: column;
   }
